Added images, moved package hierarchy, added SMS logger

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="worldbank.org.gridsensor" >
+    package="com.andrewwhitby.gridsensor" >
 
     <application
-        android:name="worldbank.org.gridsensor.GridSensorApplication"
+        android:name="com.andrewwhitby.gridsensor.GridSensorApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.andrewwhitby.gridsensor.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
