--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "worldbank.org.gridsensor"
+        applicationId "com.andrewwhitby.gridsensor"
         minSdkVersion 15
         targetSdkVersion 15
         versionCode 1
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.android.gms:play-services:3.2.25'
 }
